loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:2: error: not found: value n
  n=0
  ^Poucet2:5: error: not found: value n
      n=n+1
      ^Poucet2:10: error: not found: value n
  if(n >= 3){
     ^